<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.example.testusersapp.presentation.ui.views.UserParamsView
        android:id="@+id/tv_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title = "@string/name"/>

    <com.example.testusersapp.presentation.ui.views.UserParamsView
        android:id="@+id/tv_user_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"
        app:title = "@string/age"/>

    <com.example.testusersapp.presentation.ui.views.UserParamsView
        android:id="@+id/tv_user_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_age"
        app:title = "@string/company"/>

    <com.example.testusersapp.presentation.ui.views.UserParamsView
        android:id="@+id/tv_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_company"
        app:title = "@string/email"/>

    <com.example.testusersapp.presentation.ui.views.UserParamsView
        android:id="@+id/tv_user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_email"
        app:title = "@string/phone"/>

    <com.example.testusersapp.presentation.ui.views.UserParamsView
        android:id="@+id/tv_user_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_phone"
        app:title = "@string/address"/>

    <com.example.testusersapp.presentation.ui.views.UserParamsView
        android:id="@+id/tv_user_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_address"
        app:title = "@string/about"/>

</androidx.constraintlayout.widget.ConstraintLayout>